--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
     <div class="row header">
         <div class="col-md-4 logo"> <img src="img/logo.png"></div>
         <div class="col-md-8 main-menu">
-            <ul>
+            <ul id="nav">
                 <li class="current"><a href="#home">Home</a></li>
-                <li><a href="#service">Services</a></li>
-                <li><a href="#who_we_are">Portfolio</a></li>
-                <li><a href="#get_in_touch">Pricing</a></li>
-                <li><a href="#get_in_touch">About</a></li>
-                <li><a href="#get_in_touch">Contacts</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#pricing">Pricing</a></li>
+                <li><a href="#about_us">About</a></li>
+                <li><a href="#contacts">Contacts</a></li>
                 <li><a href="#get_in_touch"><span class="glyphicon glyphicon-search"></span></a></li>
             </ul>
         </div>
     </div>
 
-    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel" id="home">
         <!-- Indicators -->
         <ol class="carousel-indicators">
             <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
@@ -37,31 +37,31 @@
 
         <!-- Wrapper for slides -->
         <div class="carousel-inner">
-            <div class="item active">
-                <img src="img/fashion-girl-hair-style-wide.jpg" alt="Slide 0">
+            <div class="item active ">
+                <img style="height: 590px" src="img/fashion-girl-hair-style-wide.png" alt="Slide 0">
                 <div class="carousel-caption">
-                    Blah
+
                 </div>
             </div>
             <div class="item">
-                <img src="img/girl-with-hat-and-jewelry-2880x1800.jpg" alt="Slide 1">
+                <img style="height: 590px" src="img/girl-with-hat-and-jewelry-2880x1800.png" alt="Slide 1">
                 <div class="carousel-caption">
-                    Blah
+
                 </div>
             </div>
         </div>
 
         <!-- Controls -->
         <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left"></span>
+            <img style="padding-top: 266px; padding-right: 134px;" src="img/leftArrow.png">
         </a>
         <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right"></span>
+            <img style="padding-top: 266px; padding-left: 134px;" src="img/rightArrow.png">
         </a>
     </div>
 
 
-    <div class="row services">
+    <div class="row services " id="services">
             <div class=" row col-lg-10 col-lg-offset-1">
                 <h2 class="everyHeader">Our Services</h2>
                     <div class="srv">
@@ -88,14 +88,14 @@
     </div>
 
     <div class="jumbotron firstJimbotron">
-        <h1>Hello, world!</h1>
-        <p>...</p>
-        <p><a class="btn btn-primary btn-lg" role="button">Learn more</a></p>
+        <h1 style="padding-top: 6px;">Some information there</h1>
+        <p>Sign to get more</p>
+        <a style="text-align: right" href="#" class="myButton">Learn more</a>
     </div>
 
 
 
-    <div class="row portfolio" >
+    <div class="row portfolio" id="portfolio" >
     <div class="col-lg-10 col-lg-offset-1">
             <h2 class="everyHeader">Portfolio</h2>
         <ul>
@@ -121,11 +121,15 @@
         </div>
     </div>
     <div class="jumbotron secondJimbotron">
-            <h1>Hello, world!</h1>
-            <p>...</p>
+            <h1 style="text-align: right">Something here</h1>
+                <p>Ei est dicat volutpat liberavisse<br>
+                    eu duo mollis molestie<br>
+                    erat pertinacia cu vel,<br>
+                    democritum reformidans et pri.
+                </p>
         </div>
 
-    <div class="row prices">
+    <div class="row prices" id="pricing">
         <div class="col-lg-10 col-lg-offset-1">
             <h2 class="everyHeader">Our Price</h2>
             <div class="row">
@@ -145,7 +149,7 @@
         </div>
         </div>
         <div class="col-lg-4">
-        <div class="bigcolumn">
+        <div style="background-color: #f4f4f4; color: #5c5c5c;" class="bigcolumn">
             <h4>Reseller cloud</h4>
             <h3>10$/day</h3>
             <ul class="list-unstyled">
@@ -254,8 +258,8 @@
     </div>
 
     <div class="jumbotron thirdJimbotron">
-        <h1>Hello, world!</h1>
-        <p>...</p>
+        <h1 style="text-align: right">Our team</h1>
+        <h2 style="text-align: right">We are professional and progressive</h2>
     </div>
 
     <div class="row aboutUs">
@@ -301,11 +305,11 @@
     </div>
 
     <div class="jumbotron fourthJimbotron">
-        <h1>Hello, world!</h1>
-        <p>...</p>
+        <h1 style="margin-top: 100px; margin-left: 95px">You looked over 6000 PX</h1>
+        <h2 style="margin-left: 95px">That's great!</h2>
     </div>
 
-    <div class="row contactUs">
+    <div class="row contactUs" id="contacts">
         <div class="col-lg-10 col-lg-offset-1" style="color: #ffffff">
             <h2 class="everyHeader">Contact us</h2>
             <div class="row">
@@ -362,6 +366,19 @@
         </div>
     </div>
 
+    <div class="row footer">
+
+        <div class="col-md-4 logo"> <img src="img/logo.png"></div>
+            <div class="col-md-8 main-menu">
+                <ul>
+                    <li><strong>(123) 456-7890</strong></li>
+                    <li><strong><a href="mailto:#">first.last@example.com</a></strong></li>
+                    <li>skype:<strong>Username</strong></li>
+                </ul>
+        </div>
+        </div>
+    
+</div>
 
     <script type="application/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script type="application/javascript" src="js/jquery.nav.js"></script>
