--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head lang="en">
 
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Parallels</title>
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
@@ -13,10 +13,10 @@
 </head>
 <body>
     <div class="row header">
-        <div class="col-md-4 logo"> <img src="img/logo.png"></div>
+        <div class="col-md-4 logo"> <img src="img/logo.png" alt="logo"></div>
         <div class="col-md-8 main-menu">
             <ul id="nav">
-                <li class="current"><a href="#home">Home</a></li>
+
                 <li><a href="#services">Services</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
                 <li><a href="#pricing">Pricing</a></li>
@@ -65,22 +65,22 @@
             <div class=" row col-lg-10 col-lg-offset-1">
                 <h2 class="everyHeader">Our Services</h2>
                     <div class="srv">
-                        <img src="img/webdes.png">
+                        <img src="img/webdes.png" alt="...">
                         <h4>WebDesign</h4>
                         <p>Lorem ipsum dolor sit amet, te has probo mandamus recteque, id mei periculis repudiare, ut prompta aliquam cum.</p>
                     </div>
                     <div class="srv">
-                        <img src="img/design.png">
+                        <img src="img/design.png" alt="...">
                         <h4>UIDesign</h4>
                         <p>Lorem ipsum dolor sit amet, te has probo mandamus recteque, id mei periculis repudiare, ut prompta aliquam cum.</p>
                     </div>
                     <div class="srv">
-                        <img src="img/bin.png">
+                        <img src="img/bin.png" alt="...">
                         <h4>Prototype</h4>
                         <p>Lorem ipsum dolor sit amet, te has probo mandamus recteque, id mei periculis repudiare, ut prompta aliquam cum.</p>
                     </div>
                     <div class="srv">
-                        <img src="img/photo.png">
+                        <img src="img/photo.png" alt="...">
                         <h4>Photography</h4>
                         <p>Lorem ipsum dolor sit amet, te has probo mandamus recteque, id mei periculis repudiare, ut prompta aliquam cum.</p>
                     </div>
@@ -106,16 +106,16 @@
         </ul>
 
 
-            <div class="row gallery ">
+            <div class=" gallery ">
 
-                    <img src="img/fashion-photography-fabulous.jpg" alt="..." class="img-rounded">
-                    <img src="img/WEB-IN-SUNSET-Scenery-Desktop-wallpapers.jpg" alt="..." class="img-rounded">
-                    <img src="img/Windows-7-Fashion-and-Art-Desktop-Wallpaper.jpg" alt="..." class="img-rounded">
-                    <img src="img/108b557fc7a342e52bda3ce48464c6e4_large.jpeg" alt="..." class="img-rounded">
-                    <img src="img/vintage-vw-bus-wallpaper.jpg" alt="..." class="img-rounded">
-                    <img src="img/camera-clothes-fashion-girl-photography-Favim.com-341369.jpg" alt="..." class="img-rounded">
-                    <img src="img/Gucci%20SS%2008%20%20Natasha%20Poly%20by%20Inez%20&%20Vinoodh.jpg" alt="..." class="img-rounded">
-                    <img src="img/sweet-girl-heart-glove-2880x1800.jpg" alt="..." class="img-rounded">
+                    <img src="img/fashion-photography-fabulous.png" alt="..." class="img-rounded">
+                    <img src="img/WEB-IN-SUNSET-Scenery-Desktop-wallpapers.png" alt="..." class="img-rounded">
+                    <img src="img/Windows-7-Fashion-and-Art-Desktop-Wallpaper.png" alt="..." class="img-rounded">
+                    <img src="img/girl.png" alt="..." class="img-rounded">
+                    <img src="img/vintage-vw-bus-wallpaper.png" alt="..." class="img-rounded">
+                    <img src="img/camera-clothes-fashion-girl-photography-Favim.com-341369.png" alt="..." class="img-rounded">
+                    <img src="img/girl2.png" alt="..." class="img-rounded">
+                    <img src="img/sweet-girl-heart-glove-2880x1800.png" alt="..." class="img-rounded">
 
             </div>
         </div>
@@ -267,25 +267,25 @@
             <h2 class="everyHeader">About us</h2>
             <div class="row">
                 <div class="col-lg-3 team Mark">
-                    <img src="img/mark.png">
+                    <img src="img/mark.png" alt="...">
                     <h4>Marc Cream</h4>
                     <h5>Developer</h5>
                     <p>Duo legere verear mediocritatem in, ex homero laoreet eam, munere tractatos abhorreant cu sed.</p>
                 </div>
                 <div class="col-lg-3 team antonio">
-                    <img src="img/Antonio.png">
+                    <img src="img/Antonio.png" alt="...">
                     <h4>Marc Cream</h4>
                     <h5>Developer</h5>
                     <p>Duo legere verear mediocritatem in, ex homero laoreet eam, munere tractatos abhorreant cu sed.</p>
                 </div>
                 <div class="col-lg-3 team mario">
-                    <img src="img/mario.png">
+                    <img src="img/mario.png" alt="...">
                     <h4>Marc Cream</h4>
                     <h5>Developer</h5>
                     <p>Duo legere verear mediocritatem in, ex homero laoreet eam, munere tractatos abhorreant cu sed.</p>
                 </div>
                 <div class="col-lg-3 team ben">
-                    <img src="img/ben.png">
+                    <img src="img/ben.png" alt="...">
                     <h4>Marc Cream</h4>
                     <h5>Developer</h5>
                     <p>Duo legere verear mediocritatem in, ex homero laoreet eam, munere tractatos abhorreant cu sed.</p>
@@ -300,7 +300,11 @@
                     </tr>
                 </table>​
             </div>
-            <img src="img/skills.png">
+            <img src="img/webdesSkill.png" alt="...">
+            <img src="img/creativeSkill.png" alt="...">
+            <img src="img/UISkill.png" alt="...">
+            <img src="img/protoSkill.png" alt="...">
+            <img src="img/photoSkill.png" alt="...">
         </div>
     </div>
 
@@ -355,13 +359,13 @@
         <h1 class="text-uppercase">Connect with us</h1>
         <h2 class="text-capitalize">Follow us on social networks</h2>
             <div>
-                <a href="#"><img src="img/cat-icon.png"></a>
-                <a href="#"><img src="img/flickr-icon.png"></a>
-                <a href="#"><img src="img/vimeo-icon.png"></a>
-                <a href="#"><img src="img/twit-icon.png"></a>
-                <a href="#"><img src="img/faceb-icon.png"></a>
-                <a href="#"><img src="img/pint-icon.png"></a>
-                <a href="#"><img src="img/t-icon.png"></a>
+                <a href="#"><img src="img/cat-icon.png" alt="..."></a>
+                <a href="#"><img src="img/flickr-icon.png" alt="..."></a>
+                <a href="#"><img src="img/vimeo-icon.png" alt="..."></a>
+                <a href="#"><img src="img/twit-icon.png" alt="..."></a>
+                <a href="#"><img src="img/faceb-icon.png" alt="..."></a>
+                <a href="#"><img src="img/pint-icon.png" alt="..."></a>
+                <a href="#"><img src="img/t-icon.png" alt="..."></a>
             </div>
         </div>
     </div>
@@ -377,11 +381,10 @@
                 </ul>
         </div>
         </div>
-    
-</div>
+
 
     <script type="application/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script type="application/javascript" src="js/jquery.nav.js"></script>
+
     <script type="application/javascript" src="js/bootstrap.js"></script>
 </body>
 </html>
