--- a/parallels/index.html
+++ b/parallels/index.html
@@ -13,17 +13,19 @@
 </head>
 <body>
     <div class="row header">
-        <div class="col-md-4 logo"> <img src="img/logo.png" alt="logo"></div>
-        <div class="col-md-8 main-menu">
-            <ul id="nav">
+        <div class="col-md-10 col-md-offset-1">
+        <div class="col-sm-4 logo"> <img src="img/logo.png" alt="logo"></div>
+            <div class="col-sm-8 main-menu">
+                <ul id="nav">
 
-                <li><a href="#services">Services</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="#pricing">Pricing</a></li>
-                <li><a href="#about_us">About</a></li>
-                <li><a href="#contacts">Contacts</a></li>
-                <li><a href="#get_in_touch"><span class="glyphicon glyphicon-search"></span></a></li>
-            </ul>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#portfolio">Portfolio</a></li>
+                    <li><a href="#pricing">Pricing</a></li>
+                    <li><a href="#about_us">About</a></li>
+                    <li><a href="#contacts">Contacts</a></li>
+                    <li><a href="#get_in_touch"><span class="glyphicon glyphicon-search"></span></a></li>
+                </ul>
+            </div>
         </div>
     </div>
 
@@ -62,7 +64,7 @@
 
 
     <div class="row services " id="services">
-            <div class=" row col-lg-10 col-lg-offset-1">
+            <div class=" row col-md-8 col-md-offset-2">
                 <h2 class="everyHeader">Our Services</h2>
                     <div class="srv">
                         <img src="img/webdes.png" alt="...">
@@ -96,7 +98,7 @@
 
 
     <div class="row portfolio" id="portfolio" >
-    <div class="col-lg-10 col-lg-offset-1">
+    <div class="col-md-10 col-md-offset-1">
             <h2 class="everyHeader">Portfolio</h2>
         <ul>
             <li><a href="#" >WebDesign</a></li>
@@ -130,10 +132,10 @@
         </div>
 
     <div class="row prices" id="pricing">
-        <div class="col-lg-10 col-lg-offset-1">
+        <div class="col-md-10 col-md-offset-1">
             <h2 class="everyHeader">Our Price</h2>
             <div class="row">
-            <div class="col-lg-4">
+            <div class="col-sm-4">
 
             <div class="bigcolumn">
                 <h4>Website hosting</h4>
@@ -148,7 +150,7 @@
             <p><a href="#" class="myButton">Purchase</a></p>
         </div>
         </div>
-        <div class="col-lg-4">
+        <div class="col-sm-4">
         <div style="background-color: #f4f4f4; color: #5c5c5c;" class="bigcolumn">
             <h4>Reseller cloud</h4>
             <h3>10$/day</h3>
@@ -162,7 +164,7 @@
             <p><a href="#" class="myButton">Purchase</a></p>
         </div>
         </div>
-        <div class="col-lg-4">
+        <div class="col-sm-4">
         <div class="bigcolumn">
             <h4>Dedicated hosting</h4>
             <h3>10$/day</h3>
@@ -180,7 +182,7 @@
 
 
         <div class="row fourColumn">
-            <div class="col-lg-3 centered-text">
+            <div class="col-md-3 centered-text">
 
                 <div class="smallcolumn greyCol">
                     <h4>Website hosting</h4>
@@ -195,7 +197,7 @@
                     <p><a href="#" class="myButton btnWhite">Purchase</a></p>
                 </div>
             </div>
-            <div class="col-lg-3">
+            <div class="col-md-3">
                 <div class="smallcolumn blueCol">
                     <h4>Reseller cloud</h4>
                     <h3>10$/day</h3>
@@ -209,7 +211,7 @@
                     <p><a href="#" class="myButton btnBlue">Purchase</a></p>
                 </div>
             </div>
-            <div class="col-lg-3">
+            <div class="col-md-3">
                 <div class="smallcolumn greenCol">
                     <h4>Dedicated hosting</h4>
                     <h3>10$/day</h3>
@@ -223,7 +225,7 @@
                     <p><a href="#" class="myButton">Purchase</a></p>
                 </div>
             </div>
-            <div class="col-lg-3">
+            <div class="col-md-3">
                 <div class="smallcolumn whiteCol">
                     <h4>Dedicated hosting</h4>
                     <h3>10$/day</h3>
@@ -240,7 +242,7 @@
         </div>
     </div>
         <div>
-            <div class="col-lg-10 col-lg-offset-1 opinion">
+            <div class="col-md-10 col-md-offset-1 opinion">
                 <table width="100%">
                     <tr>
                         <td><hr /></td>
@@ -248,7 +250,7 @@
                         <td><hr /></td>
                     </tr>
                 </table>​
-                    <div class="col-md-4 col-md-offset-4">
+                    <div class="col-sm-4 col-sm-offset-4">
                         <p>Ei est dicat volutpat liberavisse, affert persecuti consetetur sit ei. Albucius recteque gloriatur nec eu. Has decore facilis alienum ex, ut wisi error vim, esse lorem mel eu. Pro discere albucius id. Duo dicant dictas nonumes ad, at sit aliquam molestie necessitatibus.</p>
                         <span> #Perry Maliton</span>
                     </div>
@@ -263,28 +265,28 @@
     </div>
 
     <div class="row aboutUs">
-        <div class="col-lg-10 col-lg-offset-1 ">
+        <div class="col-md-10 col-md-offset-1 ">
             <h2 class="everyHeader">About us</h2>
             <div class="row">
-                <div class="col-lg-3 team Mark">
+                <div class="col-sm-3 team Mark">
                     <img src="img/mark.png" alt="...">
                     <h4>Marc Cream</h4>
                     <h5>Developer</h5>
                     <p>Duo legere verear mediocritatem in, ex homero laoreet eam, munere tractatos abhorreant cu sed.</p>
                 </div>
-                <div class="col-lg-3 team antonio">
+                <div class="col-sm-3 team antonio">
                     <img src="img/Antonio.png" alt="...">
                     <h4>Marc Cream</h4>
                     <h5>Developer</h5>
                     <p>Duo legere verear mediocritatem in, ex homero laoreet eam, munere tractatos abhorreant cu sed.</p>
                 </div>
-                <div class="col-lg-3 team mario">
+                <div class="col-sm-3 team mario">
                     <img src="img/mario.png" alt="...">
                     <h4>Marc Cream</h4>
                     <h5>Developer</h5>
                     <p>Duo legere verear mediocritatem in, ex homero laoreet eam, munere tractatos abhorreant cu sed.</p>
                 </div>
-                <div class="col-lg-3 team ben">
+                <div class="col-sm-3 team ben">
                     <img src="img/ben.png" alt="...">
                     <h4>Marc Cream</h4>
                     <h5>Developer</h5>
@@ -314,10 +316,10 @@
     </div>
 
     <div class="row contactUs" id="contacts">
-        <div class="col-lg-10 col-lg-offset-1" style="color: #ffffff">
+        <div class="col-md-10 col-md-offset-1" style="color: #ffffff">
             <h2 class="everyHeader">Contact us</h2>
             <div class="row">
-                <div class="col-md-8">
+                <div class="col-sm-8">
 
                     <div class="askQuestion">
                         <h3>Mail</h3>
@@ -330,7 +332,7 @@
                     </div>
                     <div><a href="#" class="myButton btnBlue">Submit mail</a></div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-sm-4">
                     <div class="info">
                         <h3>More info</h3>
                             <hr width="225px" align="left" color="#353638"/>
@@ -371,7 +373,7 @@
     </div>
 
     <div class="row footer">
-
+<div class="col-md-10 col-md-offset-1">
         <div class="col-md-4 logo"> <img src="img/logo.png"></div>
             <div class="col-md-8 main-menu">
                 <ul>
@@ -381,7 +383,7 @@
                 </ul>
         </div>
         </div>
-
+    </div>
 
     <script type="application/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 
