--- a/parallels/index.html
+++ b/parallels/index.html
@@ -66,22 +66,22 @@
     <div class="row services " id="services">
             <div class=" row col-md-8 col-md-offset-2">
                 <h2 class="everyHeader">Our Services</h2>
-                    <div class="srv">
+                    <div class="col-sm-3 srv">
                         <img src="img/webdes.png" alt="...">
                         <h4>WebDesign</h4>
                         <p>Lorem ipsum dolor sit amet, te has probo mandamus recteque, id mei periculis repudiare, ut prompta aliquam cum.</p>
                     </div>
-                    <div class="srv">
+                    <div class="col-sm-3  srv">
                         <img src="img/design.png" alt="...">
                         <h4>UIDesign</h4>
                         <p>Lorem ipsum dolor sit amet, te has probo mandamus recteque, id mei periculis repudiare, ut prompta aliquam cum.</p>
                     </div>
-                    <div class="srv">
+                    <div class="col-sm-3 srv">
                         <img src="img/bin.png" alt="...">
                         <h4>Prototype</h4>
                         <p>Lorem ipsum dolor sit amet, te has probo mandamus recteque, id mei periculis repudiare, ut prompta aliquam cum.</p>
                     </div>
-                    <div class="srv">
+                    <div class="col-sm-3 srv">
                         <img src="img/photo.png" alt="...">
                         <h4>Photography</h4>
                         <p>Lorem ipsum dolor sit amet, te has probo mandamus recteque, id mei periculis repudiare, ut prompta aliquam cum.</p>
@@ -323,7 +323,7 @@
 
                     <div class="askQuestion">
                         <h3>Mail</h3>
-                        <hr width="675" align="left"/>
+                        <hr width="87%" align="left"/>
                         <input type="text" class="form-control emailForm" placeholder="Name">
                         <input type="email" class="form-control emailForm" id="exampleInputEmail2" placeholder="Mail">
 
@@ -335,7 +335,7 @@
                 <div class="col-sm-4">
                     <div class="info">
                         <h3>More info</h3>
-                            <hr width="225px" align="left" color="#353638"/>
+                            <hr width="60%px" align="left" color="#353638"/>
                         <address>
                             <strong>(123) 456-7890</strong><br>
                             <strong><a href="mailto:#">first.last@example.com</a></strong><br>
