--- a/parallels/index.html
+++ b/parallels/index.html
@@ -55,10 +55,10 @@
 
         <!-- Controls -->
         <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-            <img style="padding-top: 266px; padding-right: 134px;" src="img/leftArrow.png">
+            <img style="padding-top: 135%; padding-right: 75%;" src="img/leftArrow.png">
         </a>
         <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-            <img style="padding-top: 266px; padding-left: 134px;" src="img/rightArrow.png">
+            <img style="padding-top: 135%; padding-left: 75%;" src="img/rightArrow.png">
         </a>
     </div>
 
