--- a/parallels/index.html
+++ b/parallels/index.html
@@ -14,6 +14,7 @@
 <body>
     <div class="row header">
         <div class="col-md-10 col-md-offset-1">
+            <div class="row">
         <div class="col-sm-4 logo"> <img src="img/logo.png" alt="logo"></div>
             <div class="col-sm-8 main-menu">
                 <ul id="nav">
@@ -26,6 +27,7 @@
                     <li><a href="#get_in_touch"><span class="glyphicon glyphicon-search"></span></a></li>
                 </ul>
             </div>
+        </div>
         </div>
     </div>
 
@@ -55,17 +57,19 @@
 
         <!-- Controls -->
         <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-            <img style="padding-top: 135%; padding-right: 75%;" src="img/leftArrow.png">
+            <img style="padding-top: 135%; " src="img/leftArrow.png">
         </a>
         <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-            <img style="padding-top: 135%; padding-left: 75%;" src="img/rightArrow.png">
+            <img style="padding-top: 135%; " src="img/rightArrow.png">
         </a>
     </div>
 
 
-    <div class="row services " id="services">
-            <div class=" row col-md-8 col-md-offset-2">
+    <div class=" services " id="services">
+            <div class=" row ">
+                <div class="col-md-8 col-md-offset-2">
                 <h2 class="everyHeader">Our Services</h2>
+                    <div class="row">
                     <div class="col-sm-3 srv">
                         <img src="img/webdes.png" alt="...">
                         <h4>WebDesign</h4>
@@ -86,7 +90,9 @@
                         <h4>Photography</h4>
                         <p>Lorem ipsum dolor sit amet, te has probo mandamus recteque, id mei periculis repudiare, ut prompta aliquam cum.</p>
                     </div>
+                    </div>
             </div>
+        </div>
     </div>
 
     <div class="jumbotron firstJimbotron">
@@ -241,7 +247,9 @@
             </div>
         </div>
     </div>
-        <div>
+
+
+        <div class="row">
             <div class="col-md-10 col-md-offset-1 opinion">
                 <table width="100%">
                     <tr>
