--- a/parallels/index.html
+++ b/parallels/index.html
@@ -104,7 +104,7 @@
 
 
     <div class="row portfolio" id="portfolio" >
-    <div class="col-md-10 col-md-offset-1">
+    <div class="col-md-8 col-md-offset-2">
             <h2 class="everyHeader">Portfolio</h2>
         <ul>
             <li><a href="#" >WebDesign</a></li>
@@ -138,14 +138,15 @@
         </div>
 
     <div class="row prices" id="pricing">
-        <div class="col-md-10 col-md-offset-1">
+        <div class="col-md-8 col-md-offset-2">
             <h2 class="everyHeader">Our Price</h2>
-            <div class="row">
-            <div class="col-sm-4">
 
+                <div class="row">
+
+                    <div class="col-sm-4">
             <div class="bigcolumn">
                 <h4>Website hosting</h4>
-                    <h3>10$/day</h3>
+                <h3>10$/day</h3>
                         <ul class="list-unstyled">
                             <li><strong>2x</strong>option 1</li>
                             <li><strong>Free</strong>option 2</li>
@@ -156,40 +157,46 @@
             <p><a href="#" class="myButton">Purchase</a></p>
         </div>
         </div>
-        <div class="col-sm-4">
-        <div style="background-color: #f4f4f4; color: #5c5c5c;" class="bigcolumn">
-            <h4>Reseller cloud</h4>
-            <h3>10$/day</h3>
-            <ul class="list-unstyled">
-                <li><strong>2x</strong>option 1</li>
-                <li><strong>Free</strong>option 2</li>
-                <li><strong>Unlimited</strong>option 3</li>
-                <li><strong>Unlimited</strong>option 4</li>
-                <li><strong>1x</strong>option 5</li>
-            </ul>
-            <p><a href="#" class="myButton">Purchase</a></p>
-        </div>
-        </div>
-        <div class="col-sm-4">
-        <div class="bigcolumn">
-            <h4>Dedicated hosting</h4>
-            <h3>10$/day</h3>
-            <ul class="list-unstyled">
-                <li><strong>2x</strong>option 1</li>
-                <li><strong>Free</strong>option 2</li>
-                <li><strong>Unlimited</strong>option 3</li>
-                <li><strong>Unlimited</strong>option 4</li>
-                <li><strong>1x</strong>option 5</li>
-            </ul>
-            <p><a href="#" class="myButton">Purchase</a></p>
-        </div>
+
+                    <div class="col-sm-4">
+                    <div style="background-color: #f4f4f4; color: #5c5c5c;" class="bigcolumn">
+                        <h4>Reseller cloud</h4>
+                        <h3>10$/day</h3>
+                        <ul class="list-unstyled">
+                            <li><strong>2x</strong>option 1</li>
+                            <li><strong>Free</strong>option 2</li>
+                            <li><strong>Unlimited</strong>option 3</li>
+                            <li><strong>Unlimited</strong>option 4</li>
+                            <li><strong>1x</strong>option 5</li>
+                        </ul>
+                        <p><a href="#" class="myButton">Purchase</a></p>
+                    </div>
+                    </div>
+
+                    <div class="col-sm-4">
+                    <div class="bigcolumn">
+                        <h4>Dedicated host</h4>
+                        <h3>10$/day</h3>
+                        <ul class="list-unstyled">
+                            <li><strong>2x</strong>option 1</li>
+                            <li><strong>Free</strong>option 2</li>
+                            <li><strong>Unlimited</strong>option 3</li>
+                            <li><strong>Unlimited</strong>option 4</li>
+                            <li><strong>1x</strong>option 5</li>
+                        </ul>
+                        <p><a href="#" class="myButton">Purchase</a></p>
+                    </div>
+                    </div>
         </div>
         </div>
 
 
-        <div class="row fourColumn">
+        <div class="row">
+            <div class="col-md-10 col-md-offset-1 fourColumn">
+
+                <div class="row">
+
             <div class="col-md-3 centered-text">
-
                 <div class="smallcolumn greyCol">
                     <h4>Website hosting</h4>
                     <h3>10$/day</h3>
@@ -203,6 +210,7 @@
                     <p><a href="#" class="myButton btnWhite">Purchase</a></p>
                 </div>
             </div>
+
             <div class="col-md-3">
                 <div class="smallcolumn blueCol">
                     <h4>Reseller cloud</h4>
@@ -217,6 +225,7 @@
                     <p><a href="#" class="myButton btnBlue">Purchase</a></p>
                 </div>
             </div>
+
             <div class="col-md-3">
                 <div class="smallcolumn greenCol">
                     <h4>Dedicated hosting</h4>
@@ -231,6 +240,7 @@
                     <p><a href="#" class="myButton">Purchase</a></p>
                 </div>
             </div>
+
             <div class="col-md-3">
                 <div class="smallcolumn whiteCol">
                     <h4>Dedicated hosting</h4>
@@ -245,6 +255,9 @@
                     <p><a href="#" class="myButton btnGrey">Purchase</a></p>
                 </div>
             </div>
+
+
+          </div>
         </div>
     </div>
 
