--- a/parallels/index.html
+++ b/parallels/index.html
@@ -57,10 +57,10 @@
 
         <!-- Controls -->
         <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-            <img style="padding-top: 135%; " src="img/leftArrow.png">
+            <span class="glyphicon glyphicon-chevron-left"></span>
         </a>
         <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-            <img style="padding-top: 135%; " src="img/rightArrow.png">
+            <span class="glyphicon glyphicon-chevron-right"></span>
         </a>
     </div>
 
@@ -196,7 +196,7 @@
 
                 <div class="row">
 
-            <div class="col-md-3 centered-text">
+            <div class="col-xs-3 centered-text">
                 <div class="smallcolumn greyCol">
                     <h4>Website hosting</h4>
                     <h3>10$/day</h3>
@@ -211,9 +211,9 @@
                 </div>
             </div>
 
-            <div class="col-md-3">
+            <div class="col-xs-3">
                 <div class="smallcolumn blueCol">
-                    <h4>Reseller cloud</h4>
+                    <h4>Website hosting</h4>
                     <h3>10$/day</h3>
                     <ul class="list-unstyled">
                         <li><strong>2x</strong>option 1</li>
@@ -226,9 +226,9 @@
                 </div>
             </div>
 
-            <div class="col-md-3">
+            <div class="col-xs-3">
                 <div class="smallcolumn greenCol">
-                    <h4>Dedicated hosting</h4>
+                    <h4>Website hosting</h4>
                     <h3>10$/day</h3>
                     <ul class="list-unstyled">
                         <li><strong>2x</strong>option 1</li>
@@ -241,9 +241,9 @@
                 </div>
             </div>
 
-            <div class="col-md-3">
+            <div class="col-xs-3">
                 <div class="smallcolumn whiteCol">
-                    <h4>Dedicated hosting</h4>
+                    <h4>Website hosting</h4>
                     <h3>10$/day</h3>
                     <ul class="list-unstyled">
                         <li><strong>2x</strong>option 1</li>
@@ -271,7 +271,7 @@
                         <td><hr /></td>
                     </tr>
                 </table>​
-                    <div class="col-sm-4 col-sm-offset-4">
+                    <div class="col-xs-4 col-xs-offset-4">
                         <p>Ei est dicat volutpat liberavisse, affert persecuti consetetur sit ei. Albucius recteque gloriatur nec eu. Has decore facilis alienum ex, ut wisi error vim, esse lorem mel eu. Pro discere albucius id. Duo dicant dictas nonumes ad, at sit aliquam molestie necessitatibus.</p>
                         <span> #Perry Maliton</span>
                     </div>
@@ -289,25 +289,25 @@
         <div class="col-md-10 col-md-offset-1 ">
             <h2 class="everyHeader">About us</h2>
             <div class="row">
-                <div class="col-sm-3 team Mark">
+                <div class="col-xs-3 team Mark">
                     <img src="img/mark.png" alt="...">
                     <h4>Marc Cream</h4>
                     <h5>Developer</h5>
                     <p>Duo legere verear mediocritatem in, ex homero laoreet eam, munere tractatos abhorreant cu sed.</p>
                 </div>
-                <div class="col-sm-3 team antonio">
+                <div class="col-xs-3 team antonio">
                     <img src="img/Antonio.png" alt="...">
                     <h4>Marc Cream</h4>
                     <h5>Developer</h5>
                     <p>Duo legere verear mediocritatem in, ex homero laoreet eam, munere tractatos abhorreant cu sed.</p>
                 </div>
-                <div class="col-sm-3 team mario">
+                <div class="col-xs-3 team mario">
                     <img src="img/mario.png" alt="...">
                     <h4>Marc Cream</h4>
                     <h5>Developer</h5>
                     <p>Duo legere verear mediocritatem in, ex homero laoreet eam, munere tractatos abhorreant cu sed.</p>
                 </div>
-                <div class="col-sm-3 team ben">
+                <div class="col-xs-3 team ben">
                     <img src="img/ben.png" alt="...">
                     <h4>Marc Cream</h4>
                     <h5>Developer</h5>
@@ -340,7 +340,7 @@
         <div class="col-md-10 col-md-offset-1" style="color: #ffffff">
             <h2 class="everyHeader">Contact us</h2>
             <div class="row">
-                <div class="col-sm-8">
+                <div class="col-xs-8">
 
                     <div class="askQuestion">
                         <h3>Mail</h3>
@@ -353,7 +353,7 @@
                     </div>
                     <div><a href="#" class="myButton btnBlue">Submit mail</a></div>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-xs-4">
                     <div class="info">
                         <h3>More info</h3>
                             <hr width="60%px" align="left" color="#353638"/>
