--- a/parallels/index.html
+++ b/parallels/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="row header">
-        <div class="col-md-10 col-md-offset-1">
+        <div class="col-lg-8 col-lg-offset-2">
             <div class="row">
         <div class="col-sm-4 logo"> <img src="img/logo.png" alt="logo"></div>
             <div class="col-sm-8 main-menu">
