--- a/retro/index.html
+++ b/retro/index.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title></title>
+    <title>Retro</title>
     <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -15,7 +15,7 @@
 
         <div class="header-bg">
             <div class="row">
-                <div class="col-md-8 col-md-offset-2" >
+                <div class="col-md-10 col-md-offset-1" >
 
                         <ul class=" mainMenu">
                             <li><a href="#" >About me</a></li>
