--- a/luggage/index.html
+++ b/luggage/index.html
@@ -44,8 +44,8 @@
 <div class=" row ">
     <div class="col-md-8 col-md-offset-2">
         <div class="firstJimbotron">
-            <h3>Fed up with having to pay an EXTRA $50, $75, $100 <br/>
-            in overweight baggage fees at the airport?</h3>
+            <h3>Fed up with having to pay an <span style="color: red">EXTRA $50, $75, $100 <br/>
+            in overweight baggage fees</span> at the airport?</h3>
         </div>
     </div>
 </div>
@@ -92,6 +92,7 @@
 <div class="row">
     <div class="col-md-8 col-md-offset-2">
         <div class="features">
+            <div class="amazon"></div>
                <H2>AWESOME FEATURES YOU’LL LOVE</H2>
             <DIV class="row">
                 <div class="col-sm-10 col-sm-offset-1">
@@ -248,9 +249,9 @@
 
             </div>
             <div class="testSlider">
-                <div class="slidePart"><a href="#"><img src="img/leftArr.png" alt=""/></a></div>
-                <div class="slidePart"><img src="img/testSlider.png" style="border: 7px solid #e54242 ; border-radius: 4px ;width: 100% "  alt=""/></div>
-                <div class="slidePart"><a href="#"><img src="img/rightArr.png" alt=""/></a></div>
+
+                <div class="slidePart"><img src="img/testSlider.png" style="border: 7px solid #e54242 ; border-radius: 4px ; "  alt=""/></div>
+                
             </div>
         </div>
     </div>
@@ -266,24 +267,24 @@
                         <img src="img/product.png" alt="product"/>
                     </div>
                     <div class="col-sm-8 bullet">
-                        <h2>ORDER WITH CONFIDENCE</h2>
+                        <h2><span style="color: red">ORDER WITH</span> CONFIDENCE</h2>
                         <ul class="list-unstyled">
-                            <li><span class="glyphicon glyphicon-ok"></span>100%Satisfaction Guaranteed!</li>
-                            <li><span class="glyphicon glyphicon-ok"></span>Amazingly Helpful Customer Service!</li>
-                            <li><span class="glyphicon glyphicon-ok"></span>Buy 3 Get FREE Shipping from Amazon!</li>
-                            <li>Price: <del>39.97</del> 15.47 (<em>Save 61%</em>)</li>
+                            <li><span style="color: #1c73ba; font-weight: bold"><span class="glyphicon glyphicon-ok"></span>100%</span>Satisfaction Guaranteed!</li>
+                            <li><span style="color: #1c73ba; font-weight: bold"><span class="glyphicon glyphicon-ok"></span>Amazingly Helpful</span> Customer Service!</li>
+                            <li><span style="color: #1c73ba; font-weight: bold"><span class="glyphicon glyphicon-ok"></span></span>Buy 3 Get <span style="color: #1c73ba; font-weight: bold">FREE Shipping </span> from Amazon!</li>
+                            <li><span style="color: #1c73ba; font-weight: bold">Price:</span> <del>39.97</del> <span style="color: red">15.47 (<em>Save 61%</em>)</span></li>
                             <li><a href="#"><img src="img/butt2.png" alt=""/></a></li>
                         </ul>
 
                     </div>
                 </div>
                 <div>
-                    <h4>Enjoy our 30-Day Zero-Risk Money-Back <br/>
-                        Guarantee & Worry-Free Lifetime Warranty</h4>
+                    <h4>Enjoy our <b>30-Day</b> Zero-Risk Money-Back <br/>
+                        Guarantee & Worry-Free <b>Lifetime</b> Warranty</h4>
                             <img src="img/warr1.png" alt="warranty"/>
                             <img src="img/warr2.png" alt="warranty"/>
 
-                    <h5>Your complete satisfaction is our #1 priority, always! After all, we're customers too!</h5>
+                    <h5><b>Your complete satisfaction is our #1 priority, always! After all, we're customers too!</b></h5>
                 </div>
             </div>
         </div>
@@ -297,15 +298,13 @@
 
                         <div class="col-sm-6">
                             <img src="img/askIcon.png" alt="..."/>
-                            <h3>Frequently Asked Questions</h3>
+                            <h4>Frequently Asked Questions</h4>
                             <img style="width: 100%" src="img/aboutSlider.png" alt="..."/>
                         </div>
-                        <div class="col-sm-6 amazonStore">
+                        <div class="col-sm-6 ">
                             <img src="img/peopIcon.png" alt=""/>
-                            <h3>The Lifesaver Store on Amazon</h3>
-                            <p>The Lifesaver Store specializes in providing super useful products designed to help everyday folks, just like you and us, save their hard-earned money,
-                                conserve their valuable time, and eliminate stress from their daily lives. The Luggage Lifesaver does just that for travelers who want to travel with peace of mind and avoid paying overweight baggage fees. We love making a difference in the lives of others, and we are110% committed to our customers’ complete
-                                satisfaction, each and every time!</p>
+                            <h4>The Lifesaver Store on Amazon</h4>
+                            <img style="width: 100%" src="img/FAQ.png" alt=""/>
                         </div>
                     </div>
 
