--- a/whappbook/index.html
+++ b/whappbook/index.html
@@ -9,6 +9,58 @@
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
 </head>
 <body>
+
+<div class="modal fade bs-example-modal-lg" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+<div class="modal-dialog modal-lg">
+    <div class="modal-content">
+        <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+
+        </div>
+<div class="modal-body">
+    <div class="row">
+        <div class="col-sm-6 col-sm-offset-3">
+            <div class="description">
+                <h5>THE INSTRUCTIONS</h5>
+                <h2>CREATE WITHIN SECONDS</h2>
+                <p>Just send the Whatsapp conversation to make@whappbook.com tellus eget condimentum rhoncus, sem quam semper libero.</p>
+            </div>
+        </div>
+    </div>
+    <div class="row" >
+        <div class="col-sm-4">
+            <div class="description">
+                <img src="img/iphone_graph.png" alt="iphone2"/>
+                <h5>STEP 1</h5>
+                <h3>Open a chat in whatsapp</h3>
+                <p>Open a chat in Whatsapp and go to Group Info. </p>
+            </div>
+        </div>
+        <div class="col-sm-4">
+            <div class="description">
+                <img src="img/iphone_graph.png"  alt="iphone2"/>
+                <h5>STEP 2</h5>
+                <h3>Select email conversation</h3>
+                <p>Tap ‘Email Conversation’ and select ‘Attach Media’. </p>
+            </div>
+        </div>
+        <div class="col-sm-4">
+            <div class="description">
+                <img src="img/iphone_graph.png"  alt="iphone2"/>
+                <h5>STEP 3</h5>
+                <h3>Send to make@whappbook.com</h3>
+                <p>Send the email to make@whappbook.com</p>
+            </div>
+        </div>
+    </div>
+    <div class="modal-footer">
+
+    </div>
+</div>
+</div>
+</div>
+</div>
+
 <div class="row header">
     <img class="book_img" src="img/book.png" alt="whappbook"/>
         <div>
@@ -44,23 +96,23 @@
 
 <div class="row about">
     <div class="col-md-10 col-md-offset-1">
-        <div class="row ">
+        <div class="row about_cont">
             <div class="col-sm-4 ">
-                <div class="about_cont">
+                <div >
                     <img class="about_img" src="img/brush.png" alt=".."/>
                     <h3>Memories</h3>
                     <p>A Whappbook captures around one month of chats. </p>
                 </div>
             </div>
             <div class="col-sm-4 ">
-                <div class="about_cont">
+                <div >
                     <img class="about_img" src="img/brush.png" alt=".."/>
                     <h3>Beautful quality</h3>
                     <p>A book consists out of 72 pages with 20 grams fine quality paper.</p>
                 </div>
             </div>
             <div class="col-sm-4 ">
-                <div class="about_cont">
+                <div >
                     <img class="about_img" src="img/brush.png" alt=".."/>
                     <h3>Content</h3>
                     <p>Maecenas tempus, tellus eget condimentum tellus eget condimentum rhoncus. </p>
@@ -70,14 +122,14 @@
     </div>
 </div>
 
-   <div class="row about2">
+   <div class="row about2 ">
        <div class="col-md-10 col-md-offset-1">
            <div class="row">
-               <div class="col-sm-6">
-                   <img class="every_img hidden-xs" src="img/open_book.png" alt="openBook"/>
+               <div class="col-sm-6 ">
+                   <img class="every_img " src="img/open_book.png" alt="openBook"/>
                </div>
-               <div class="col-sm-6">
-                   <div class="description text-left">
+               <div class="col-sm-6 ">
+                   <div class="description text-left ">
                        <h5>GROUP STATISTICS</h5>
                        <h2>CHECK OUT WHAT HAPPENED</h2>
                        <p>Group statistics en soort content in het boekje. tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. </p>
@@ -86,6 +138,23 @@
            </div>
        </div>
    </div>
+       <div class="row about2mob col-md-offset-1 ">
+       <div class="col-md-10 col-md-offset-1 ">
+           <div class="row">
+               <div class="col-sm-6 ">
+                   <div class="description text-left ">
+                       <h5>GROUP STATISTICS</h5>
+                       <h2>CHECK OUT WHAT HAPPENED</h2>
+                       <p>Group statistics en soort content in het boekje. tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. </p>
+                   </div>
+               </div>
+               <div class="col-sm-6 ">
+                   <img class="every_img " src="img/open_book.png" alt="openBook"/>
+               </div>
+           </div>
+       </div>
+</div>
+
 
 
 <div class="row fun_facts">
@@ -104,7 +173,7 @@
             <div class="col-sm-3 col-xs-6 friends">
                 <img src="img/night_ow.png" alt="..."/>
                 <h4>Night Owl</h4>
-                <p>Dibero, sit amet adipiscing sem neque sed ipsum. Nam quam </p>
+                <p>Dibero, sit amet adipiscing sem neque sed ipsum. </p>
             </div>
             <div class="col-sm-3 col-xs-6 friends">
                 <img src="img/party_an.png" alt=".."/>
@@ -150,6 +219,13 @@
                     <p>Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit</p>
                 </div>
             </div>
+            <div class="item">
+                <img class="every_img" src="img/slider.png" alt="...">
+                <div class="carousel-caption">
+                    <h3>BACKUP YOUR CHATS</h3>
+                    <p>Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit</p>
+                </div>
+            </div>
 
         </div>
 
@@ -174,7 +250,7 @@
                 </div>
             </div>
         </div>
-       <div class="row" >
+       <div class="row instructions_cont">
            <div class="col-sm-4">
                <div>
                <img src="img/iphone_graph.png" alt="iphone2"/>
@@ -204,7 +280,7 @@
 </div>
 <!-- Modal -->
 
-<div class="row pricing">
+<div class="row pricing ">
     <div class="col-md-10 col-md-offset-1">
         <div class="row">
             <div class="col-sm-6">
@@ -221,10 +297,30 @@
      </div>
 </div>
 
+<div class="row pricing_mob ">
+    <div class="col-md-10 col-md-offset-1">
+        <div class="row">
+
+            <div class="col-sm-6">
+                <div class="description text-left regular_descr">
+                    <h5>PRICING</h5>
+                    <h2>ORDER YOURS FOR € 29.50</h2>
+                    <p>You’ll get your Whappbook. Free shipping! Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. </p>
+                </div>
+            </div>
+            <div class="col-sm-6">
+                <img class="every_img" src="img/black_book.png" alt="..."/>
+            </div>
+        </div>
+    </div>
+</div>
+
 <div class="row last_punchline">
     <div class="col-md-6 col-md-offset-3">
         <h3>Email your Whatsapp conversation to: <br/> make@whappbook.com</h3>
-        <button type="button" class="btn btn-default btn-lg">GET STARTED</button>
+            <div class="button">
+                <a href="#" class="bttn">GET STARTED</a>
+            </div>
     </div>
 </div>
 
@@ -256,56 +352,9 @@
     </div>
 </div>
 
-<div class="modal fade bs-example-modal-lg" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
 
-            </div>
 
-            <div class="modal-body">
-                <div class="row">
-                    <div class="col-sm-6 col-sm-offset-3">
-                        <div class="description">
-                            <h5>THE INSTRUCTIONS</h5>
-                            <h2>CREATE WITHIN SECONDS</h2>
-                            <p>Just send the Whatsapp conversation to make@whappbook.com tellus eget condimentum rhoncus, sem quam semper libero.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="row" >
-                    <div class="col-sm-4">
-                        <div class="description">
-                            <img src="img/iphone_graph.png" alt="iphone2"/>
-                            <h5>STEP 1</h5>
-                            <h3>Open a chat in whatsapp</h3>
-                            <p>Open a chat in Whatsapp and go to Group Info. </p>
-                        </div>
-                    </div>
-                    <div class="col-sm-4">
-                        <div class="description">
-                            <img src="img/iphone_graph.png"  alt="iphone2"/>
-                            <h5>STEP 2</h5>
-                            <h3>Select email conversation</h3>
-                            <p>Tap ‘Email Conversation’ and select ‘Attach Media’. </p>
-                        </div>
-                    </div>
-                    <div class="col-sm-4">
-                        <div class="description">
-                            <img src="img/iphone_graph.png"  alt="iphone2"/>
-                            <h5>STEP 3</h5>
-                            <h3>Send to make@whappbook.com</h3>
-                            <p>Send the email to make@whappbook.com</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="modal-footer">
 
-                </div>
-            </div>
-        </div>
-    </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
