--- a/whappbook/index.html
+++ b/whappbook/index.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width">
     <title>WHAPPBOOK</title>
 
     <link href="css/main.css" rel="stylesheet"/>
@@ -10,12 +10,13 @@
 </head>
 <body>
 
+
+
 <div class="modal fade bs-example-modal-lg" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
 <div class="modal-dialog modal-lg">
     <div class="modal-content">
         <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-
         </div>
 <div class="modal-body">
     <div class="row">
@@ -194,7 +195,7 @@
     </div>
 </div>
 
-<div class="row slider">
+<div class="slider">
     <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
         <!-- Indicators -->
         <ol class="carousel-indicators">
@@ -342,15 +343,17 @@
     <div class="col-md-6">
         <div class="row">
             <div class="col-sm-6 col-sm-offset-5">
-                <ul class="list-unstyled social">
-                    <li id="twit"><a href="#"><img src="img/twit.png" alt=".."/></a></li>
-                    <li id="fb"><a href="#"><img src="img/fb.png" alt=".."/></a></li>
-                    <li id="insta"><a href="#"><img src="img/insta.png" alt=""/></a></li>
-                </ul>
+                <div class="row social">
+                    <div class="col-xs-4"><a href="#"><img src="img/twit.png" alt=".."/></a></div>
+                    <div class="col-xs-4"><a href="#"><img src="img/twit.png" alt=".."/></a></div>
+                    <div class="col-xs-4"><a href="#"><img src="img/insta.png" alt=""/></a></div>
                 </div>
+            </div>
         </div>
     </div>
 </div>
+
+
 
 
 
