--- a/retro/index.html
+++ b/retro/index.html
@@ -37,11 +37,11 @@
             <div class="col-md-10 col-md-offset-1 " >
                 <div class="rib">
                     <div>
-                        <img src="img/retro-.png" alt="retro"/>
+                        <img class="every_img" src="img/retro-.png" alt="retro"/>
                     </div>
 
                     <div>
-                        <img src="img/ribbon.png" alt=""/>
+                        <img class="every_img" src="img/ribbon.png" alt=""/>
                     </div>
                 </div>
 
@@ -102,29 +102,29 @@
                 <h3>I'm a graphic designer from Baltimore</h3>
           </div>
             <div class="row columns">
-                <div class="col-xs-3">
-                    <img src="img/movie.png" alt="movie"/>
+                <div class="col-sm-3">
+                    <img  src="img/movie.png" alt="movie"/>
                     <h1>movie</h1>
                     <h3></h3>
                     <hr/>
                     <p>Eu nisl dissentiunt has, eu duo mollis molestie intellegat, eos ad fugit patrioque persecuti. Pri rebum sanctus in. Qui ei interesset theophrastus comprehensam, ullum omnes suscipiantur et sed. Ei sint assentior definitiones mel. Duo legere verear mediocritatem in, ex homero laoreet eam, munere tractatos abhorreant cu sed.</p>
                 </div>
-                <div class="col-xs-3">
-                    <img src="img/music.png" alt="music"/>
+                <div class="col-sm-3">
+                    <img  src="img/music.png" alt="music"/>
                     <h1>music</h1>
                     <h3></h3>
                     <hr/>
                     <p>Eu nisl dissentiunt has, eu duo mollis molestie intellegat, eos ad fugit patrioque persecuti. Pri rebum sanctus in. Qui ei interesset theophrastus comprehensam, ullum omnes suscipiantur et sed. Ei sint assentior definitiones mel. Duo legere verear mediocritatem in, ex homero laoreet eam, munere tractatos abhorreant cu sed.</p>
                 </div>
-                <div class="col-xs-3">
-                    <img src="img/clothes.png" alt="clth"/>
+                <div class="col-sm-3">
+                    <img  src="img/clothes.png" alt="clth"/>
                     <h1>clothes</h1>
                     <h3></h3>
                     <hr/>
                     <p>Eu nisl dissentiunt has, eu duo mollis molestie intellegat, eos ad fugit patrioque persecuti. Pri rebum sanctus in. Qui ei interesset theophrastus comprehensam, ullum omnes suscipiantur et sed. Ei sint assentior definitiones mel. Duo legere verear mediocritatem in, ex homero laoreet eam, munere tractatos abhorreant cu sed.</p>
                 </div>
-                <div class="col-xs-3">
-                    <img src="img/food.png" alt="food"/>
+                <div class="col-sm-3">
+                    <img  src="img/food.png" alt="food"/>
                     <h1>food</h1>
                     <h3></h3>
                     <hr color="#000000" width="40px"/>
