--- a/luggage/index.html
+++ b/luggage/index.html
@@ -224,17 +224,18 @@
 
 <div class="row">
     <div class="col-md-8 col-md-offset-2 ">
-        <div class="offer">
-        <div class="media">
+        <div class=" row offer">
+        <div class="col-sm-4 media">
             <a class="pull-left" href="#">
                 <img class="media-object" src="img/offerImg.png" alt="...">
             </a>
-            <div class="media-body">
+        </div>
+            <div class="col-sm-8 media-body">
                 <h2 class="media-heading"><em>FREE BONUS!</em></h2>
                 <h3>2014 One-Stop Guide to Airline Fees</h3>
                 <p>Get our quick reference guide for every major fee charged by the 13 largest U.S. airlines! Delivered instantly (as a PDF Guide) with your order shipment confirmation – stay up-to-date and fly with confidence! We truly believe in providing our customers with great value, so it’s yours for <strong>FREE!</strong></p>
             </div>
-        </div>
+
     </div>
 </div>
 </div>
@@ -250,7 +251,7 @@
             </div>
             <div class="testSlider">
 
-                <div class="slidePart"><img src="img/testSlider.png" style="border: 7px solid #e54242 ; border-radius: 4px ; "  alt=""/></div>
+                <div class="slidePart"><img src="img/testSlider.png" style="border: 7px solid #e54242 ; border-radius: 4px ; "  alt=".."/></div>
                 
             </div>
         </div>
